---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: TBD
  Changes:
    - changed transition time (seconds) setting to transition speed (kmph)
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2121-03-06
  Changes:
    - added support for Space Exploration's Satellite Navigation view
    - added support for the Brave New World mod
    - adjusted startup function so trainsaver will follow the train with the longest remaining path instead of just choosing a random one
    - fixed that the camera would move back to the player character 60x faster than intended when trainsaver was ending due to train inactivity
    - adjusted secret focus to be more visually consistent across different display resolutions
    - minor performance improvements
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2021-02-09
  Changes:
    - added setting to toggle if game controls end trainsaver
    - added setting to toggle if trainsaver will autostart when player has a gui open
    - added setting to toggle if trainsaver will autostart when player has the map open
    - afk autostart is now more precise
    - fixed that factorio would turn alt-mode off every time trainsaver focused on a new target
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2021-02-06
  Changes:
    - added setting to enable a secret alternate focus for trainsaver that triggers under certain conditions
    - added linked game control to end trainsaver when player opens the train overview gui
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2021-01-16
  Changes: